Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-40015

QXmlSimpleReader (and therefore QDom) is not reentrant

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • 5.4.0
    • 5.3.1
    • XML: DOM
    • None
    • aabe80ae2895a4d7f115486c1e5f0033f33b6959

      qtbase/src/xml/sax/qxml.cpp
      // Hack for letting QDom know where the skipped entity occurred
      // ### Qt5: the use of this variable means the code isn't reentrant.
      bool qt_xml_skipped_entity_in_content;
      ...
      

      Indeed that global bool showed up in helgrind traces when using QDomDocument in two threads.

      Fixed in https://codereview.qt-project.org/88036 which depends on https://codereview.qt-project.org/88044

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            Unassigned Unassigned
            dfaure David Faure (Private)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes