Move QXmlReaderPrivate to private header.

First step for making QXmlSimpleReader reentrant.

Task-number: QTBUG-40015
Change-Id: I1666672b1759adb745b86ce58488142f3c66d3f5
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>

cregit: e26fa6d2066d76b295a71956f67cccc7941c3f32 https://github.com/qt/qtbase/commit/e26fa6d2066d76b295a71956f67cccc7941c3f32