src/xml/sax/qxml_p.h
@@ -1,0 +1,1 @@
+DECL|macro|QXML_P_H
